# solana-zk-proof-example

./: .gitmodules  Cargo.toml  README.md
escrow/programs/escrow/: Cargo.toml
escrow/programs/escrow/src/: error.rs  lib.rs
escrow/programs/escrow/src/handlers/: execute_atomic_swap.rs  initialize_enhanced.rs  mod.rs  reveal_and_verify.rs  verify_zk_proofs.rs
escrow/programs/escrow/src/state/: enhanced_escrow.rs  mod.rs  order_details.rs
integration-tests/: Cargo.toml  package-lock.json  package.json  tsconfig.json
integration-tests/src/: lib.rs
integration-tests/tests/: commit_reveal.ts  e2e_tests.rs
on-chain-program-example/: Cargo.toml
on-chain-program-example/src/: byte_utils.rs  circuit.rs  main.rs  prove.rs  verify.rs  verify_lite.rs
on-chain-program-example/tests/: byte_utils_tests.rs  prove_tests.rs
proof-verify/: Cargo.toml
proof-verify/src/: lib.rs
proof-verify/tests/: program_tests.rs
solana-commit-reveal/commit-reveal-dapp/: Anchor.toml
solana-commit-reveal/commit-reveal-dapp/programs/commit-reveal-dapp/: Cargo.toml
solana-commit-reveal/commit-reveal-dapp/programs/commit-reveal-dapp/src/: lib.rs
solana-commit-reveal/commit-reveal-dapp/tests/: commit-reveal-dapp.ts
