[workspace]
members = [
    "solana-commit-reveal/commit-reveal-dapp/programs/commit-reveal-dapp",
    "proof-verify",
    "dex-router/programs/dex-solana",
    "integration-tests",
    "on-chain-program-example",
    "zk-elgamal-proof/zk-sdk",
    "zk-elgamal-proof/zk-sdk-wasm-js"
]
resolver = "2"

[workspace.package]
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/zk-elgamal-proof"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']

[workspace.dependencies]
anchor-lang = "0.31.1"
solana-program = "3.0.0"
borsh = { version = "1.5.1", features = ["derive"] }
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.0"

# Dependencies from zk-elgamal-proof submodule
aes-gcm-siv = "0.11.1"
base64 = "0.22.1"
bincode = "1.3.3"
bytemuck = "1.23.2"
bytemuck_derive = "1.9.3"
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core"] }
getrandom = "0.2"
itertools = "0.12.1"
js-sys = "0.3.77"
merlin = { version = "3", default-features = false }
num-derive = "0.4"
num-traits = "0.2"
rand = "0.8.5"
serde = "1.0.228"
serde_derive = "1.0.219"
serde_json = "1.0.145"
sha3 = "0.10.8"
solana-derivation-path = "3.0.0"
solana-instruction = "3.0.0"
solana-keypair = "3.0.0"
solana-pubkey = { version = "3.0.0", default-features = false }
solana-sdk-ids = "3.0.0"
solana-seed-derivable = "3.0.0"
solana-seed-phrase = "3.0.0"
solana-signature = { version = "3.0.0", default-features = false }
solana-signer = "3.0.0"
solana-zk-sdk = { path = "zk-elgamal-proof/zk-sdk", version = "4.0.0" }
subtle = "2.6.1"
thiserror = "2.0.17"
tiny-bip39 = "0.8.2"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
zeroize = { version = "1.8", default-features = false }