[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "3.0.0"
solana-program-test = "3.0.0"
solana-sdk = "3.0.0"
solana-client = "3.0.0"
solana-commitment-config = "3.0.0"
borsh = { workspace = true }
tokio = { version = "1.14", features = ["full"] }
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-groth16 = "0.4.0"
ark-serialize = "0.4.0"
ark-std = "0.4.0"
ark-relations = "0.4.0"
ark-snark = "0.4.0"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"

