[package]
name = "solana-zk-example"
version = "0.1.0"
edition = "2021"

[workspace]

[features]
no-entrypoint = []
no-log-ix-name = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
solana-program = "3.0.0"
anyhow = "1.0.87"
thiserror = "1.0.63"
sha2 = "0.10.8"
borsh = { version = "1.5.1", features = ["derive"] }
solana-zk-sdk = { path = "../../zk-elgamal-proof/zk-sdk/"  }
ark-bn254 = "0.4.0"

[lib]
crate-type = ["cdylib", "lib"]

#[patch.crates-io]
#signature = "=0.3.0"  # Use the version compatible with Solana v3.0.0 dependencies
