[package]
name = "solana-zk-example"
version = "0.1.0"
edition = "2021"

[workspace]

[features]
no-entrypoint = []
no-log-ix-name = []
no-idl = []
cpi = ["no-entrypoint"]

default = []
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
solana-program = "3.0.0"
anyhow = "1.0.87"
thiserror = "1.0.63"
sha2 = "0.10.8"
borsh = { version = "1.5.1", features = ["derive"] }
solana-zk-sdk = { path = "../../zk-elgamal-proof/zk-sdk/" }
sp1-solana = { git = "https://github.com/succinctlabs/sp1-solana" }
solana-bn254 = "3.0.0"
# Remove ark-bn254 and ark-ec unless used explicitly elsewhere
# ark-bn254 = "0.4.0"
# ark-ec = "0.4"

[lib]
crate-type = ["cdylib", "lib"]

#[patch.crates-io]
#signature = "=0.3.0"  # Use the version compatible with Solana v3.0.0 dependencies
