[package]
name = "commit-reveal-dapp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "commit_reveal_dapp"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-panic = []
custom-heap = []


[dependencies]
anchor-lang = { workspace = true }
sha2 = "0.10.8"
solana-program = { workspace = true }
borsh = { workspace = true }


